--- a/plot_figures_paper.ipynb
+++ b/plot_figures_paper.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Plot results for paper\n",
     "\n",
-    "Some description of what is being done here"
+    "Code to generate most of the figures in the paper"
    ]
   },
   {
